working on casting, fixed ff bug causing text to flicker

--- a/examples/styles/circles.css
+++ b/examples/styles/circles.css
@@ -46,15 +46,12 @@ artboard.full {
 	display: block;
 }
 
-pre {
-	/* margin: 0
- */}
-
-svg {
-		/*position: absolute;*/
-		width: 500px;
-		/* height: 500px; */
-
+artboard.xl {
+	width: 600px;
+	height: 600px;
+		
+	margin: auto;
+	display: block;
 }
 
 html {
